# HSP

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
docs/: capytaine-format-notes.md  catenary.md  milestone-4-plan.md  milestone-5-plan.md  milestone-6-plan.md  morison-conventions.md  openfast-cross-check-conventions.md  wamit-fixture-attribution.md  wamit-format-notes.md
docs/audits/: m6-pr3-asymptotic-tail-check.md  m6-pr3-radiation-kernel-bug.md
docs/diagnostics/: m6-pr3-filon-formula-check.md
docs/post-mortems/: hydrostatic-gravity-bug.md  m6-pr3-radiation-kernel-bug.md
examples/: two_body_semisub_barge.yml
floatsim/: __init__.py
floatsim/bodies/: __init__.py  connector.py  mass_properties.py  rigid_body.py
floatsim/hydro/: __init__.py  _filon.py  database.py  excitation.py  hydrostatics.py  morison.py  radiation.py  retardation.py
floatsim/hydro/readers/: __init__.py  capytaine.py  orcaflex_vessel_yaml.py  orcawave.py  wamit.py
floatsim/io/: __init__.py  deck.py  results.py
floatsim/mooring/: __init__.py  catenary_analytic.py
floatsim/post/: __init__.py
floatsim/solver/: __init__.py  equilibrium.py  newmark.py  ramp.py  state.py
floatsim/validation/: __init__.py
floatsim/waves/: __init__.py  kinematics.py  regular.py
scripts/: build_capytaine_synthetic_fixtures.py  build_sphere_capytaine_fixture.py  ci.sh  extract_openfast_fixtures.py  trim_marin_semi_fixture.py
tests/fixtures/bem/capytaine/: synthetic_simple.nc  synthetic_sphere.nc
tests/fixtures/bem/wamit/: marin_semi_trimmed.1  marin_semi_trimmed.3  synthetic_simple.1  synthetic_simple.3  synthetic_simple.4  synthetic_simple.hst
tests/fixtures/openfast/: .gitignore
tests/fixtures/openfast/oc4_deepcwind/: README.md
tests/fixtures/openfast/oc4_deepcwind/baseline/case/: 5MW_OC4Semi_WSt_WavesWN.MD.out  5MW_OC4Semi_WSt_WavesWN.fst  README.md  generate_scenario_decks.py  run_scenarios.py  scenario_config.py
tests/fixtures/openfast/oc4_deepcwind/inputs/: manifest.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s1_static_eq/: s1_static_eq.csv  s1_static_eq.fst  s1_static_eq.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s2_pitch_decay/: s2_pitch_decay.csv  s2_pitch_decay.fst  s2_pitch_decay.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_004p0/: s3_rao_sweep_WaveTp_004p0.csv  s3_rao_sweep_WaveTp_004p0.fst  s3_rao_sweep_WaveTp_004p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_005p0/: s3_rao_sweep_WaveTp_005p0.csv  s3_rao_sweep_WaveTp_005p0.fst  s3_rao_sweep_WaveTp_005p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_006p0/: s3_rao_sweep_WaveTp_006p0.csv  s3_rao_sweep_WaveTp_006p0.fst  s3_rao_sweep_WaveTp_006p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_007p0/: s3_rao_sweep_WaveTp_007p0.csv  s3_rao_sweep_WaveTp_007p0.fst  s3_rao_sweep_WaveTp_007p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_008p0/: s3_rao_sweep_WaveTp_008p0.csv  s3_rao_sweep_WaveTp_008p0.fst  s3_rao_sweep_WaveTp_008p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_010p0/: s3_rao_sweep_WaveTp_010p0.csv  s3_rao_sweep_WaveTp_010p0.fst  s3_rao_sweep_WaveTp_010p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_012p0/: s3_rao_sweep_WaveTp_012p0.csv  s3_rao_sweep_WaveTp_012p0.fst  s3_rao_sweep_WaveTp_012p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_014p0/: s3_rao_sweep_WaveTp_014p0.csv  s3_rao_sweep_WaveTp_014p0.fst  s3_rao_sweep_WaveTp_014p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_016p0/: s3_rao_sweep_WaveTp_016p0.csv  s3_rao_sweep_WaveTp_016p0.fst  s3_rao_sweep_WaveTp_016p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_018p0/: s3_rao_sweep_WaveTp_018p0.csv  s3_rao_sweep_WaveTp_018p0.fst  s3_rao_sweep_WaveTp_018p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_020p0/: s3_rao_sweep_WaveTp_020p0.csv  s3_rao_sweep_WaveTp_020p0.fst  s3_rao_sweep_WaveTp_020p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_022p0/: s3_rao_sweep_WaveTp_022p0.csv  s3_rao_sweep_WaveTp_022p0.fst  s3_rao_sweep_WaveTp_022p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_025p0/: s3_rao_sweep_WaveTp_025p0.csv  s3_rao_sweep_WaveTp_025p0.fst  s3_rao_sweep_WaveTp_025p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s3_rao_sweep/WaveTp_030p0/: s3_rao_sweep_WaveTp_030p0.csv  s3_rao_sweep_WaveTp_030p0.fst  s3_rao_sweep_WaveTp_030p0.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s4_moored_eq/: s4_moored_eq.MD.out  s4_moored_eq.csv  s4_moored_eq.fst  s4_moored_eq.json
tests/fixtures/openfast/oc4_deepcwind/inputs/s5_drag_decay/: s5_drag_decay.csv  s5_drag_decay.fst  s5_drag_decay.json
tests/support/: __init__.py  openfast_csv.py  openfast_deck.py  synthetic_bem.py
tests/unit/: test_airy_kinematics.py  test_capytaine_reader.py  test_catenary_analytic.py  test_connector.py  test_cummins_lhs.py  test_deck.py  test_equilibrium.py  test_excitation.py  test_filon_quadrature.py  test_hydro_database.py  test_hydrostatics.py  test_imports.py  test_mass_properties.py  test_morison.py  test_newmark_integrator.py  test_openfast_csv.py  test_openfast_deck.py  test_orcaflex_vessel_yaml_reader.py  test_radiation_convolution.py  test_ramp.py  test_regular_wave.py  test_results.py  test_retardation_kernel.py  test_retardation_kernel_extension.py  test_rigid_body.py  test_synthetic_bem_builder.py  test_wamit_reader.py
tests/validation/: test_bem_reader_cross_check.py  test_cummins_free_decay_analytical.py  test_gravity_restoring_asymmetric_cog.py  test_m3_regular_wave_steady_state.py  test_m4_catenary_irvine.py  test_m4_rigid_link_heave.py  test_m4_two_body_assembly.py  test_m4_two_body_moored.py  test_m5_drag_free_decay.py  test_m6_openfast_static_eq.py  test_oc4_heave_free_decay.py  test_oc4_natural_periods.py  test_oc4_pitch_period_buoyancy_only_c.py  test_orcaflex_roundtrip_oc4.py
