[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floatsim"
version = "0.0.0"
description = "Time-domain simulator for floating platforms (multi-body, 6-DOF)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Xabier" }]
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.6",
    "h5py>=3.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "black==24.*",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["floatsim*"]
exclude = ["tests*", "scripts*", "examples*", "docs*"]

# ----- Formatters / linters -----

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]  # allow non-snake-case in test math symbols

# ----- Type checking -----

[tool.mypy]
python_version = "3.11"
strict = true
files = ["floatsim"]
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["h5py", "yaml"]
ignore_missing_imports = true

# ----- Tests -----

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "slow: long-running validation tests (run in nightly CI, not every PR)",
]
